syntax = "proto3";

option java_multiple_files = true;
option java_package = "simohin.equeue.core.lib.grpc";
option java_outer_classname = "MainProto";

message UUID {
  string value = 1;
}

message QueueItem {
  UUID id = 1;
  string value = 2;
}

message RegisterQueueItemRequest {
  UUID id = 1;
}
message RegisterQueueItemResponse {
  bool isSuccess = 1;
  QueueItem item = 2;
}

message QueueItemEvent {
  enum Type {
    CREATED = 0;
    DELETED = 1;
    PROCESSED = 2;
  }

  UUID id = 1;
  Type type = 2;
  QueueItem item = 3;
}

message QueueItemRegistrationResult {
  bool isSuccess = 1;
}

service QueueItemRegistrationService {
  rpc register (RegisterQueueItemRequest) returns (RegisterQueueItemResponse) {}
}
